# risk-rubric-spec

./: .gitignore  CLAUDE.md  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-db.sql  start-services.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_scanner_id_to_identity_match_flags.py  0003_add_report_url_to_scores.py  5dd7b8f7ebaf_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: methodology.py  router.py  scanners.py  scores.py  services.py
backend/app/api/v1/admin/: auth.py  flags.py  keys.py  router.py  scanners.py  services.py
backend/app/db/: models.py
backend/app/schemas/: scores.py  services.py
backend/app/services/: identity.py  keys.py  scoring.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_auth.py  test_admin_flags.py  test_admin_keys.py  test_admin_scanners.py  test_api_methodology.py  test_api_services.py  test_api_submission.py  test_identity.py  test_keys.py  test_scoring.py
docs/: 2026-06-10-risk-rubric-v2-project-brief.md  Risk Rubric v2 Concept Paper.md  Risk Rubric v2 Scoring Methodology.md
docs/schemas/: README.md  ai-model-submission.example.yaml  ai-model-submission.yaml  mcp-server-submission.example.yaml  mcp-server-submission.yaml
frontend/: jest.config.ts  package-lock.json  package.json
frontend/src/lib/: api.ts  (+4 more)
mcp/: pyproject.toml  server.py
mcp/risk_rubric_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp/tests/: test_mcp_tools.py
(+58 files in other folders)
